# backend/src/infra/shared/swagger/swagger.json
@@ -23,6 +23,9 @@
     "/auth/authenticate": {
       "post": {
         "summary": "Authenticate account credentials and return a JWT token and a cookie with a refresh token",
+        "tags": [
+          "Auth"
+        ],
         "description": "Accounts must be verified before authenticating.",
         "operationId": "authenticate",
         "requestBody": {
@@ -76,7 +79,7 @@
                     },
                     "firstName": {
                       "type": "string",
-                      "example": "Jason"
+                      "example": "chuck"
                     },
                     "lastName": {
                       "type": "string",
@@ -84,7 +87,116 @@
                     },
                     "email": {
                       "type": "string",
-                      "example": "jason@example.com"
+                      "example": "chuck@example.com"
+                    },
+                    "role": {
+                      "type": "string",
+                      "example": "Admin"
+                    },
+                    "created": {
+                      "type": "string",
+                      "example": "2020-05-05T09:12:57.848Z"
+                    },
+                    "isVerified": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "jwtToken": {
+                      "type": "string",
+                      "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiI1ZWIxMmUxOTdlMDZhNzZjY2RlZmMxMjEiLCJpZCI6IjVlYjEyZTE5N2UwNmE3NmNjZGVmYzEyMSIsImlhdCI6MTU4ODc1ODE1N30.xR9H0STbFOpSkuGA9jHNZOJ6eS7umHHqKRhI807YT1Y"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "The email or password is incorrect",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Email or password is incorrect"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/auth/active-user": {
+      "post": {
+        "summary": "Active account",
+        "tags": [
+          "Auth"
+        ],
+        "description": "Accounts must be verified before authenticating.",
+        "operationId": "active_user",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "type": "string",
+                    "example": "asdasdasdasdasdasd"
+                  }
+                },
+                "required": [
+                  "id"
+                ]
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Account details, a JWT access token and a refresh token cookie",
+            "headers": {
+              "Set-Cookie": {
+                "description": "`refreshToken`",
+                "schema": {
+                  "type": "string",
+                  "example": "refreshToken=51872eca5efedcf424db4cf5afd16a9d00ad25b743a034c9c221afc85d18dcd5e4ad6e3f08607550; Path=/; Expires=Tue, 16 Jun 2020 09:14:17 GMT; HttpOnly"
+                }
+              }
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string",
+                      "example": "5eb12e197e06a76ccdefc121"
+                    },
+                    "title": {
+                      "type": "string",
+                      "example": "Mr"
+                    },
+                    "firstName": {
+                      "type": "string",
+                      "example": "Chuck"
+                    },
+                    "lastName": {
+                      "type": "string",
+                      "example": "Bartowski"
+                    },
+                    "email": {
+                      "type": "string",
+                      "example": "chuck@example.com"
                     },
                     "role": {
                       "type": "string",
@@ -129,6 +241,9 @@
     "/auth/confirm/{token}": {
       "get": {
         "summary": "Confirm user's mail",
+        "tags": [
+          "Auth"
+        ],
         "description": "Confirmation of user email.",
         "operationId": "refreshToken",
         "parameters": [
@@ -170,7 +285,7 @@
                     },
                     "firstName": {
                       "type": "string",
-                      "example": "Jason"
+                      "example": "chuck"
                     },
                     "lastName": {
                       "type": "string",
@@ -178,7 +293,7 @@
                     },
                     "email": {
                       "type": "string",
-                      "example": "jason@example.com"
+                      "example": "chuck@example.com"
                     },
                     "role": {
                       "type": "string",
@@ -223,6 +338,9 @@
     "/auth/make-admin/{userId}": {
       "post": {
         "summary": "Revoke a refresh token",
+        "tags": [
+          "Auth"
+        ],
         "description": "Admin users can revoke the tokens of any account, regular users can only revoke their own tokens.",
         "operationId": "revokeToken",
         "parameters": [
@@ -273,6 +391,9 @@
     "/user": {
       "get": {
         "summary": "Get a list of all accounts",
+        "tags": [
+          "User"
+        ],
         "description": "Restricted to admin users.",
         "operationId": "getAllAccounts",
         "security": [
@@ -300,7 +421,7 @@
                       },
                       "firstName": {
                         "type": "string",
-                        "example": "Jason"
+                        "example": "chuck"
                       },
                       "lastName": {
                         "type": "string",
@@ -308,7 +429,7 @@
                       },
                       "email": {
                         "type": "string",
-                        "example": "jason@example.com"
+                        "example": "chuck@example.com"
                       },
                       "role": {
                         "type": "string",
@@ -335,6 +456,9 @@
       },
       "post": {
         "summary": "Register a new user account and send a verification email",
+        "tags": [
+          "User"
+        ],
         "description": "The first account registered in the system is assigned the `Admin` role, other accounts are assigned the `User` role.",
         "operationId": "register",
         "requestBody": {
@@ -403,6 +527,9 @@
     "/auth/forgot-password": {
       "post": {
         "summary": "Submit email address to reset the password on an account",
+        "tags": [
+          "Auth"
+        ],
         "operationId": "forgotPassword",
         "requestBody": {
           "required": true,
@@ -413,7 +540,7 @@
                 "properties": {
                   "email": {
                     "type": "string",
-                    "example": "jason@example.com"
+                    "example": "chuck@example.com"
                   }
                 },
                 "required": [
@@ -446,6 +573,9 @@
     "/auth/reset-password": {
       "post": {
         "summary": "Reset the password for an account",
+        "tags": [
+          "Auth"
+        ],
         "operationId": "resetPassword",
         "requestBody": {
           "required": true,
@@ -527,6 +657,9 @@
       ],
       "get": {
         "summary": "Get a single account by id",
+        "tags": [
+          "User"
+        ],
         "description": "Admin users can access any account, regular users are restricted to their own account.",
         "operationId": "getAccountById",
         "security": [
@@ -552,7 +685,7 @@
                     },
                     "firstName": {
                       "type": "string",
-                      "example": "Jason"
+                      "example": "chuck"
                     },
                     "lastName": {
                       "type": "string",
@@ -560,7 +693,7 @@
                     },
                     "email": {
                       "type": "string",
-                      "example": "jason@example.com"
+                      "example": "chuck@example.com"
                     },
                     "role": {
                       "type": "string",
@@ -589,6 +722,9 @@
       },
       "put": {
         "summary": "Update an account",
+        "tags": [
+          "User"
+        ],
         "description": "Admin users can update any account including role, regular users are restricted to their own account and cannot update role.",
         "operationId": "updateAccount",
         "security": [
@@ -609,7 +745,7 @@
                   },
                   "firstName": {
                     "type": "string",
-                    "example": "Jason"
+                    "example": "chuck"
                   },
                   "lastName": {
                     "type": "string",
@@ -617,7 +753,7 @@
                   },
                   "email": {
                     "type": "string",
-                    "example": "jason@example.com"
+                    "example": "chuck@example.com"
                   },
                   "password": {
                     "type": "string",
@@ -657,7 +793,7 @@
                     },
                     "firstName": {
                       "type": "string",
-                      "example": "Jason"
+                      "example": "chuck"
                     },
                     "lastName": {
                       "type": "string",
@@ -665,7 +801,7 @@
                     },
                     "email": {
                       "type": "string",
-                      "example": "jason@example.com"
+                      "example": "chuck@example.com"
                     },
                     "role": {
                       "type": "string",
@@ -694,6 +830,9 @@
       },
       "delete": {
         "summary": "Delete an account",
+        "tags": [
+          "User"
+        ],
         "description": "Admin users can delete any account, regular users are restricted to their own account.",
         "operationId": "deleteAccount",
         "security": [
