# backend/src/modules/account/account.routes.ts
@@ -14,7 +14,7 @@ const routes = express.Router();
 
 routes.post('/authenticate', LoginValidator, authController.authenticate);
 routes.get('/confirm/:token', ConfirmEmailValidator, authController.comfirmEmail);
-routes.post('/active-user/', authorize([ERole.Admin]), ActiveUserValidator, authController.activeUser);
+routes.post('/active-user', authorize([ERole.Admin]), ActiveUserValidator, authController.activeUser);
 routes.post('/make-admin', authorize([ERole.Admin]), authController.makeAdmin);
 routes.post('/forgot-password', ForgotPasswordValidator, authController.forgotPassword);
 routes.post('/reset-password', ResetPasswordValidator, authController.resetPassword);
